--- a/index.html
+++ b/index.html
@@ -1,24 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Listy list</title>
-    <style>
-      p { color: red; }
-      ol { display: flex; }
-      li { margin: 20px; }
-    </style>
-  </head>
-  <body>
-    <p>These are some red red words.</p>
-    <ol>
-      <li>Apple apple berry berry sauce sauce sauce.<br>
-          Cook it on the stove and serve it to your boss.
-      <li>Betty bought a bit of butter,
-          but the butter's burning bitter.<br>
-      <li>Crisp cookies claim Charlie's cookout crown.<br>  Clever Clara
-          clocked the crows at <em>c</em> (clearly connivance!)
-      <li>Daring drivers drove down Devil's Ditch in Dodges.
-      <li>Evil eggs explode everywhere. Eww!
-    </ol>
-  </body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>A SINGLE HTML PAGE ABOUT ME</title>
+	<style>
+		body {
+			font-family: clash grotesk, poppins;
+			margin: auto;
+			background: #f5f5f5;
+
+		}
+		article {
+			margin-left: 30px;
+		}
+		header {
+				text-align: center;
+		}
+		p {
+
+		}
+
+		li {
+			float: left;
+			margin-top: 20;
+			margin-right: 50;
+
+		}
+	</style>
+</head>
+<body>
+<header><h1>MY FIRST TASK SUBMISSION FRONTEND TASK SUBMISSION IN ZURI</h1></header>
+
+<article>
+	<p>I am Ifeoluwa Ajele by name.</p>
+	<p>I am a UX Designer who is learning front end development in order to be able to  code whatever is design</p>
+	<p>My goals for this internship are:
+		<ol>
+			<li>To learn the semantics of Html and be able to code any website structure.</li><br/>
+			<li>To learn the use of css and boostraps, in order to be able to style any website i code using HTML.</li><br/>
+			<li>To learn the nittygritty of Javascritpt, in order to make any website frontend i work on functional.</li>
+		</ol>
+	</p>
+
+</article>
+</body>
 </html>
